new css -  no fix drropdown

--- a/index.html
+++ b/index.html
@@ -9,31 +9,67 @@
   </head>
   <body>
 		<header class="header">
-			<nav class="header-left">
-				<ul class="list-items">
-					<li class="item item-img"><img class="logo" src="img/download.png" alt="logo"></li>
-					<li class="item"><a href="#">PERSONALE</a></li>
-					<li class="item"><a href="#">BUSINESS</a></li>
-				</ul>
-			</nav>
-			<nav class="header-right">
-				<ul class="list-items">
-					<li class="item open-menu">
-						tariffazione
-						<ul class="inside">
-							<li>Ciao</li>
-						</ul>
-					</li>
-					<!-- <li class="item"><a href="#">Conti</a></li>
-					<li class="item"><a href="#">Prodotti</a></li>
-					<li class="item"><a href="#">Azienda</a></li>
-					<li class="item"><a href="#">Aiuto</a></li>
-					<li class="item"><a href="#">IT<i class="fas fa-angle-down"></i></a></li>
-					<li class="item"><button class="button">Scarica l'app</button></li> -->
-				</ul>
+      <div class="header-left">
+				<div class="item-img">
+					<img class="logo" src="img/download.png"  alt="Logo">
+				</div>
+        <ul class="list-items">
+          <li class="item"><a href="#">PERSONALE</a></li>
+          <li class="item"><a href="#">BUSINESS</a></li>
+        </ul>
+      </div>
+      <nav class="header-right">
+        <ul class="header-right__list">
+          <li class="list-items">
+            <a href="#">Denaro</a>
+            <ul class="inside">
+              <li class="inside__item"><a href="#">Invia denaro all'estero</a></li>
+              <li class="inside__item"><a href="">Effettua e ricevi pagamenti</a></li>
+              <li class="inside__item"><a href="">Paga con Apple Pay</a></li>
+              <li class="inside__item"><a href="">Paga con GPay</a></li>
+            </ul>
+          </li>
+          <li class="list-items">
+            <a href="#">Investimenti e risparmi</a>
+            <ul class="inside">
+              <li class="inside__item"><a href="#">Effettua compravendite di titoli azionari</a></li>
+              <li class="inside__item"><a href="#">Effettua compravendite di prodotti</a></li>
+              <li class="inside__item"><a href="#">Effettua compravendite Crypto</a></li>
+              <li class="inside__item"><a href="#">Imposta i Salvadanai</a></li>
+            </ul>
+          </li>
+          <li class="list-items">
+            <a href="#">Controllo</a>
+            <ul class="inside">
+              <li class="inside__item"><a href="#">Imposta i budget</a></li>
+              <li class="inside__item"><a href="#">Tutelati</a></li>
+            </ul>
+          </li>
+          <li class="list-items">
+            <a href="#">Altro</a>
+            <ul class="inside">
+              <li class="inside__item"><a href="#">Assicura te stesso all'estero</a></li>
+              <li class="inside__item"><a href="#">Assicura il tuo dispositivo</a></li>
+              <li class="inside__item"><a href="#">Dona agli enti di beneficenza</a></li>
+            </ul>
+          </li>
+          <li class="list-items">
+            <a href="#">Abbonamenti</a>
+            <ul class="inside">
+              <li class="inside__item"><a href="#">Standard</a></li>
+              <li class="inside__item"><a href="#">Premium</a></li>
+              <li class="inside__item"><a href="#">Metal</a></li>
+              <li class="inside__item"><a href="#">Junior</a></li>
+              <li class="inside__item"><a href="#">Tariffazione</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+      <div class="button">
+        <a  href="#">Scarica l'app</a>
+      </div>
+     </header>
 
-			</nav>
-		</header>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/script.js" charset="utf-8"></script>
