--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 				</div>
         <ul class="list-items">
           <li class="item"><a href="#">PERSONALE</a></li>
+				</ul>
+				<ul class="list-items">
           <li class="item"><a href="#">BUSINESS</a></li>
         </ul>
       </div>
